--- a/.gitignore
+++ b/.gitignore
@@ -146,6 +146,11 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
+# Downloaded videos
+*.mp4
+*.webm
+*.mkv
+
 # pytype static type analyzer
 .pytype/
 
